# kaggle-project

./: .env  .env.example  .gitignore  DISCLAIMER.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py  action_planner_agent.py  classifier_agent.py  demo_fallback.py  errors.py  explainer_agent.py  extraction_agent.py  intake_agent.py  pipeline.py  response_writer_agent.py  root_orchestrator.py  safety_agent.py  security.py
agents/callbacks/: __init__.py  disclaimer_injector.py  pii_guard.py  schema_validator.py
agents/prompts/: __init__.py  action_planner.yaml  auslaenderbehoerde.yaml  classifier.yaml  explainer.yaml  extraction.yaml  finanzamt.yaml  generic_gov.yaml  intake.yaml  jobcenter.yaml  krankenkasse.yaml  orchestrator.yaml  safety.yaml
agents/specialists/: __init__.py  auslaenderbehoerde_agent.py  base.py  finanzamt_agent.py  generic_gov_agent.py  jobcenter_agent.py  krankenkasse_agent.py
agents/tools/: __init__.py  mcp_tool_adapter.py  mcp_tools.py
apps/: __init__.py
apps/api_gateway/: __init__.py  main.py
config/: __init__.py  agents.yaml  logging.yaml  mcp_servers.yaml  settings.py
db/: __init__.py  alembic.ini  models.py
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  demo_script.md  judging_checklist.md  kaggle_submission.md  kaggle_writeup.md  security.md  video_demo_script.md
mcp_servers/: __init__.py
scripts/: ingest_knowledge.py  normalize_line_endings.py  run_local.ps1  run_local.sh  run_mvp.ps1  scaffold_dirs.py  seed_synthetic_letters.py
tests/: __init__.py  conftest.py
(+90 files in other folders)
